<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddCountry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="7dp"
        android:layout_height="50dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/PrimaryButton"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/textViewCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/add_visited_country" />

        <Button
            android:id="@+id/buttonDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/PrimaryButton"
            android:text="@string/done" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="680dp"
        android:orientation="vertical">


        <Spinner
            android:id="@+id/spinnerSelect"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="124dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/tvCountry" />

        <TextView
            android:id="@+id/tvNotes"
            android:layout_width="92dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="114dp"
            android:layout_marginEnd="296dp"
            android:text="@string/note" />

        <EditText
            android:id="@+id/etNotes"
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="151dp"
            android:layout_marginEnd="14dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/comments" />

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="50dp"
            android:text= "@string/choose_a_country" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etNotes"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="184dp"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="391dp"
            android:text="@string/date" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="339dp"
            android:layout_height="363dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="37dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="5dp" />

    </RelativeLayout>


</LinearLayout>
</ScrollView>