<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WorldMapPage">

<!-- //xmlns:app="http://schemas.android.com/apk/res-auto"-->




<FrameLayout
    android:id="@+id/frg"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="9"/>

<!--        <ImageView-->
<!--            android:id="@+id/imageView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="8"-->
<!--            android:scaleType="centerCrop"-->
<!--            android:src="@drawable/worldmapprincipal" />-->


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="horizontal"
    android:layout_weight="1"
    android:background="@color/primaryDarkColor"
    android:layout_marginBottom="10dp">
    <!-- android:background="@color/backgroundLayout"-->
    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1"
        android:text="@string/world_map"
        android:theme="@style/PrimaryButton"
        android:textSize="10sp"></Button>

    <Button
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="5dp"
        android:text="@string/countries_capitals"
        android:theme="@style/PrimaryButton"
        android:textSize="10sp"></Button>

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="5dp"
        android:text="@string/visited_countries"
        android:theme="@style/PrimaryButton"
        android:textSize="10sp"></Button>

    <Button
        android:id="@+id/btn4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="5dp"
        android:text="@string/settings"
        android:theme="@style/PrimaryButton"
        android:textSize="10sp"></Button>


    </LinearLayout>


</LinearLayout>

    <!-- android:background="?android:attr/windowBackground"
            app:itemBackground="@color/bgBottomNavigation"
            android:foreground="?attr/selectableItemBackground"-->
    <!-- app:itemTextColor="@android:color/white"-->