<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment">



   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:orientation="horizontal">
       <TextView
           android:id="@+id/tvInfo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="10dp"
           android:layout_weight="0.5"
           android:layout_marginLeft="90dp"
           android:text="@string/more" />

        <ImageButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:src="@drawable/fran"
            android:background="#67eaaa"/>

    </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.8"
           android:orientation="horizontal">

       <TextView
           android:id="@+id/tvQuestion1"
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="wrap_content"
           android:text="@string/which" />

       <Button
           android:id="@+id/btNFindOut"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:textColor="#000000"
           android:layout_height="wrap_content"
           android:text="@string/click"
           android:textSize="10sp" />

       </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAnswer1"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Answer.." />

    </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

       <TextView
           android:id="@+id/tvQuestion2"
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="wrap_content"
           android:text="@string/many" />

       <Button
           android:id="@+id/btnFindOut1"
           android:layout_width="0dp"
           android:layout_weight="2"
           android:textColor="#000000"
           android:layout_height="wrap_content"

           android:text="@string/click"
           android:textSize="10sp" />
     </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.2"
           android:orientation="horizontal">

           <TextView
               android:id="@+id/tvAnswer12"
               android:layout_width="0dp"
               android:layout_weight="2"
               android:layout_height="wrap_content"
               android:text="Answer.." />

       </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

       <TextView
           android:id="@+id/tvQuestion3"
           android:layout_width="0dp"
           android:layout_weight="2"
           android:layout_height="wrap_content"
           android:text="@string/where" />

       <Button
           android:id="@+id/btnFindOut2"
           android:layout_width="0dp"
           android:layout_weight="1"
           android:textColor="#000000"
           android:layout_height="wrap_content"
           android:text="@string/click"
           android:textSize="10sp" />

    </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="0.2"
           android:orientation="horizontal">

           <TextView
               android:id="@+id/tvAnswer3"
               android:layout_width="0dp"
               android:layout_weight="2"
               android:layout_height="wrap_content"
               android:text="Answer.." />

       </LinearLayout>
       <Button
           android:id="@+id/btnClickJson"
           android:layout_width="wrap_content"
           android:layout_height="0dp"
           android:textColor="#000000"
           android:layout_weight="0.4"
           android:text="@string/highest"
           android:textSize="10sp" />

       <TextView
           android:id="@+id/textView5"
           android:layout_width="wrap_content"
           android:layout_height="0dp"
           android:layout_marginTop="7dp"
           android:layout_weight="1"
           android:text="Here is the answer" />


   </LinearLayout>


</FrameLayout>